aws/CouchbaseServerAndSyncGateway/couchbase-amzn-lnx2.template
{
    "AWSTemplateFormatVersion": "2010-09-09",
    "Description": "Couchbase Enterprise Edition Server on Amazon Linux 2",
    "Metadata": {
        "AWS::CloudFormation::Interface": {
            "ParameterGroups": [
                {
                    "Label": { "default": "Network Configuration/Access" },
                    "Parameters": ["VpcName", "SubnetList", "SSHCIDR", "KeyName"]
                },
                {
                    "Label": { "default": "Server Configuration" },
                    "Parameters": ["ServerInstanceCount", "ServerDiskSize", "ServerVersion", "InstanceType", "Username", "Password"]
                },
                {
                    "Label": { "default": "Sync Gateway Configuration" },
                    "Parameters": ["SyncGatewayInstanceCount", "SyncGatewayVersion", "SyncGatewayInstanceType"]
                }
            ],
            "ParameterLabels": {
                "SSHCIDR": { "default": "Access CIDR" },
                "Username": { "default": "Database Username"},
                "Password": { "default": "Database Password"}
            }
        }
    },
    "Mappings": {},
    "Parameters": {
        "ServerInstanceCount": {
            "Description": "Number of Couchbase Server Nodes",
            "Type": "Number",
            "Default": 3
        },
        "ServerDiskSize": {
            "Description": "Size in GB of the EBS gp2 volume on each Couchbase node",
            "Type": "Number",
            "Default": 100
        },
        "ServerVersion": {
            "Description": "Couchbase Server Version",
            "Type": "String",
            "Default": "7.0.3",
            "AllowedValues": [
                "7.0.3",
                "6.6.4",
                "6.6.3",
                "6.6.2",
                "6.6.1",
                "6.6.0",
                "6.5.1",
                "6.5.0",
                "6.0.4",
                "6.0.3",
                "6.0.2",
                "6.0.1",
                "6.0.0"
            ]
        },
        "SyncGatewayInstanceCount": {
            "Description": "Number of Couchbase Sync Gateway Nodes",
            "Type": "Number",
            "Default": 0
        },
        "SyncGatewayVersion": {
            "Description": "Couchbase Sync Gateway Version",
            "Type": "String",
            "Default": "2.8.3",
            "AllowedValues": [
                "2.8.3",
                "2.8.2",
                "2.8.0",
                "2.7.3",
                "2.7.2",
                "2.7.1",
                "2.7.0",
                "2.6.0",
                "2.5.0",
                "2.1.3",
                "2.1.2",
                "2.1.1",
                "2.1.0",
                "2.0.0",
                "2.0.2",
                "2.0.3",
                "1.5.1",
                "1.5.2"
            ]
        },
        "InstanceType": {
            "Description": "Instance type for Couchbase Nodes",
            "Type": "String",
            "Default": "m5.xlarge",
            "AllowedValues": [
                "c5n.xlarge",
                "t3.medium",
                "m4.large",
                "m4.xlarge",
                "m4.2xlarge",
                "m4.4xlarge",
                "m4.10xlarge",
                "m4.16xlarge",
                "m5.large",
                "m5.xlarge",
                "m5.2xlarge",
                "m5.4xlarge",
                "m5.12xlarge",
                "m5a.large",
                "m5a.xlarge",
                "m5a.2xlarge",
                "m5a.4xlarge",
                "m5a.12xlarge",
                "c4.large",
                "c4.xlarge",
                "c4.2xlarge",
                "c4.4xlarge",
                "c4.8xlarge",
                "c5.large",
                "c5.xlarge",
                "c5.2xlarge",
                "c5.4xlarge",
                "c5.9xlarge",
                "c5d.large",
                "c5d.xlarge",
                "c5d.2xlarge",
                "c5d.4xlarge",
                "c5d.9xlarge",
                "r4.large",
                "r4.xlarge",
                "r4.2xlarge",
                "r4.4xlarge",
                "r4.8xlarge",
                "r4.16xlarge",
                "r5.large",
                "r5.xlarge",
                "r5.2xlarge",
                "r5.4xlarge",
                "r5.8xlarge",
                "r5.16xlarge",
                "r5a.large",
                "r5a.xlarge",
                "r5a.2xlarge",
                "r5a.4xlarge",
                "r5a.8xlarge",
                "r5a.12xlarge",
                "r5a.16xlarge",
                "r5ad.large",
                "r5ad.xlarge",
                "r5ad.2xlarge",
                "r5ad.4xlarge",
                "r5ad.8xlarge",
                "r5ad.12xlarge",
                "r5ad.16xlarge",
                "i3.large",
                "i3.xlarge",
                "i3.2xlarge",
                "i3.4xlarge",
                "i3.8xlarge",
                "i3.16xlarge",
                "c5.12xlarge",
                "c5a.large",
                "c5a.xlarge",
                "c5a.2xlarge",
                "c5a.4xlarge",
                "c5a.8xlarge",
                "c5a.12xlarge",
                "c5ad.large",
                "c5ad.xlarge",
                "c5ad.2xlarge",
                "c5ad.4xlarge",
                "c5ad.8xlarge",
                "c5ad.12xlarge",
                "c5d.12xlarge",
                "m5.8xlarge",
                "c5n.2xlarge",
                "c5n.4xlarge",
                "c5n.9xlarge",
                "m5.8xlarge",
                "m5a.8xlarge",
                "r5.8xlarge",
                "r5a.8xlarge",
                "r5ad.large",
                "r5ad.xlarge",
                "r5ad.2xlarge",
                "r5ad.4xlarge",
                "r5ad.8xlarge",
                "r5ad.12xlarge",
                "r5ad.16xlarge"
            ]
        },
        "SyncGatewayInstanceType": {
            "Description": "Instance type for Couchbase Sync Gateway Nodes",
            "Type": "String",
            "Default": "m5.large",
            "AllowedValues": [
                "c5n.xlarge",
                "t3.medium",
                "t3.large",
                "t3.xlarge",
                "t3.2xlarge",
                "m4.large",
                "m4.xlarge",
                "m4.2xlarge",
                "m5.large",
                "m5.xlarge",
                "m5.2xlarge",
                "c4.large",
                "c4.xlarge",
                "c4.2xlarge",
                "c4.4xlarge",
                "c5.large",
                "c5.xlarge",
                "c5.2xlarge",
                "c5.4xlarge",
                "r5.large",
                "r5.xlarge",
                "r5.2xlarge",
                "r5.4xlarge",
                "r5d.xlarge",
                "r5d.2xlarge",
                "r5d.4xlarge",
                "r4.large",
                "r4.xlarge",
                "m5a.large",
                "m5a.xlarge",
                "m5a.2xlarge",
                "r5a.large",
                "r5a.xlarge",
                "i3.large",
                "i3.xlarge",
                "c5n.2xlarge",
                "c5n.4xlarge"
            ]
        },
        "Username": {
            "Description": "Username for Couchbase administrator",
            "Type": "String"
        },
        "Password": {
            "Description": "Password for Couchbase administrator",
            "Type": "String",
            "NoEcho": true
        },
        "KeyName": {
            "Description": "Name of an existing EC2 KeyPair",
            "Type": "AWS::EC2::KeyPair::KeyName"
        },
        "SSHCIDR": {
            "Description": "A CIDR that should be granted access to the database",
            "Type": "String",
            "MinLength": 9,
            "MaxLength": 18,
            "AllowedPattern": "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})",
            "ConstraintDescription": "must be a valid CIDR range of the form x.x.x.x/x."
        },
        "VpcName": {
            "Type": "AWS::EC2::VPC::Id",
            "Description": "VPC Identifier"
        },
        "SubnetList": {
            "Description": "Subnet List",
            "Type": "List<AWS::EC2::Subnet::Id>"
        }
    },
    "Conditions": {
        "InstallSyncGateway": {
            "Fn::Not": [
                {
                    "Fn::Equals": [
                        {
                            "Ref": "SyncGatewayInstanceCount"
                        },
                        0
                    ]
                }
            ]
        },
        "InstallCouchbaseServer": {
            "Fn::Not": [
                {
                    "Fn::Equals": [
                        {
                            "Ref": "ServerInstanceCount"
                        },
                        0
                    ]
                }
            ]
        },
        "Install": {
            "Fn::Or": [
                {
                    "Condition": "InstallCouchbaseServer"
                },
                {
                    "Condition": "InstallSyncGateway"
                }
            ]
        }
    },
    "Resources": {
        "CouchbaseSecret": {
            "Type": "AWS::SecretsManager::Secret",
            "Properties": {
                "Name": {
                    "Fn::Join": [
                        "",
                        [
                            {
                                "Ref": "AWS::StackName"
                            },
                            "-CouchbaseSecret"
                        ]
                    ]
                },
                "Description": "Couchbase Admin Username/Password Secret",
                "SecretString": {
                    "Fn::Join": [
                        "",
                        [
                            "{\"username\": \"",
                            {
                                "Ref": "Username"
                            },
                            "\", \"password\":\"",
                            {
                                "Ref": "Password"
                            },
                            "\"}"
                        ]
                    ]
                }
            }
        },
        "ServerAutoScalingGroup": {
            "Type": "AWS::AutoScaling::AutoScalingGroup",
            "Condition": "InstallCouchbaseServer",
            "Properties": {
                "LaunchTemplate": {
                    "LaunchTemplateId": {
                        "Ref": "ServerLaunchTemplate"
                    },
                    "Version": {
                        "Fn::GetAtt": [
                            "ServerLaunchTemplate",
                            "LatestVersionNumber"
                        ]
                    }
                },
                "MinSize": "0",
                "MaxSize": "100",
                "DesiredCapacity": {
                    "Ref": "ServerInstanceCount"
                },
                "VPCZoneIdentifier": {
                    "Ref": "SubnetList"
                }
            },
            "CreationPolicy": {
                "ResourceSignal": {
                    "Count": {
                        "Ref": "ServerInstanceCount"
                    },
                    "Timeout": "PT20M"
                }
            },
            "DependsOn": [
                "CouchbaseSecret"
            ]
        },
        "ServerLaunchTemplate": {
            "Type": "AWS::EC2::LaunchTemplate",
            "Condition": "InstallCouchbaseServer",
            "Properties": {
                "LaunchTemplateData": {
                    "ImageId": {
                        "Fn::FindInMap": [
                            "CouchbaseServer",
                            {
                                "Ref": "AWS::Region"
                            },
                            "AMI"
                        ]
                    },
                    "InstanceType": {
                        "Ref": "InstanceType"
                    },
                    "SecurityGroupIds": [
                        {
                            "Fn::GetAtt": [
                                "CouchbaseServerSecurityGroup",
                                "GroupId"
                            ]
                        }
                    ],
                    "KeyName": {
                        "Ref": "KeyName"
                    },
                    "EbsOptimized": true,
                    "IamInstanceProfile": {
                        "Arn": {
                            "Fn::GetAtt": [
                                "CouchbaseInstanceProfile",
                                "Arn"
                            ]
                        }
                    },
                    "BlockDeviceMappings": [
                        {
                            "DeviceName": "/dev/xvda",
                            "Ebs": {
                                "VolumeType": "gp3",
                                "DeleteOnTermination": true
                            }
                        },
                        {
                            "DeviceName": "/dev/sdk",
                            "Ebs": {
                                "VolumeSize": {
                                    "Ref": "ServerDiskSize"
                                },
                                "VolumeType": "gp3",
                                "Encrypted": true
                            }
                        }
                    ],
                    "UserData": {}
                }
            }
        },
        "SyncGatewayAutoScalingGroup": {
            "Type": "AWS::AutoScaling::AutoScalingGroup",
            "Condition": "InstallSyncGateway",
            "Properties": {
                "LaunchTemplate": {
                    "LaunchTemplateId": {
                        "Ref": "SyncGatewayLaunchTemplate"
                    },
                    "Version": {
                        "Fn::GetAtt": [
                            "SyncGatewayLaunchTemplate",
                            "LatestVersionNumber"
                        ]
                    }
                },
                "MinSize": "0",
                "MaxSize": "100",
                "LoadBalancerNames": [
                    {
                        "Ref": "GatewayLoadBalancer"
                    }
                ],
                "DesiredCapacity": {
                    "Ref": "SyncGatewayInstanceCount"
                },
                "VPCZoneIdentifier": {
                    "Ref": "SubnetList"
                }
            },
            "CreationPolicy": {
                "ResourceSignal": {
                    "Count": {
                        "Ref": "SyncGatewayInstanceCount"
                    },
                    "Timeout": "PT15M"
                }
            },
            "DependsOn": [
                "CouchbaseSecret"
            ]
        },
        "SyncGatewayLaunchTemplate": {
            "Type": "AWS::EC2::LaunchTemplate",
            "Condition": "InstallSyncGateway",
            "Properties": {
                "LaunchTemplateData": {
                    "ImageId": {
                        "Fn::FindInMap": [
                            "CouchbaseSyncGateway",
                            {
                                "Ref": "AWS::Region"
                            },
                            "AMI"
                        ]
                    },
                    "InstanceType": {
                        "Ref": "SyncGatewayInstanceType"
                    },
                    "SecurityGroupIds": [
                        {
                            "Fn::GetAtt": [
                                "SyncGatewaySecurityGroup",
                                "GroupId"
                            ]
                        }
                    ],
                    "KeyName": {
                        "Ref": "KeyName"
                    },
                    "EbsOptimized": true,
                    "IamInstanceProfile": {
                        "Arn": {
                            "Fn::GetAtt": [
                                "CouchbaseInstanceProfile",
                                "Arn"
                            ]
                        }
                    },
                    "BlockDeviceMappings": [
                        {
                            "DeviceName": "/dev/xvda",
                            "Ebs": {
                                "VolumeType": "gp3",
                                "DeleteOnTermination": true
                            }
                        }
                    ],
                    "UserData": {}
                }
            }
        },
        "GatewayLoadBalancer": {
            "Type": "AWS::ElasticLoadBalancing::LoadBalancer",
            "Condition": "InstallSyncGateway",
            "Properties": {
                "Subnets": {
                    "Ref": "SubnetList"
                },
                "CrossZone": "true",
                "Listeners": [
                    {
                        "LoadBalancerPort": "4984",
                        "InstancePort": "4984",
                        "Protocol": "HTTP"
                    },
                    {
                        "LoadBalancerPort": "4985",
                        "InstancePort": "4985",
                        "Protocol": "HTTP"
                    },
                    {
                        "LoadBalancerPort": "4986",
                        "InstancePort": "4986",
                        "Protocol": "HTTP"
                    }
                ],
                "HealthCheck": {
                    "Target": "HTTP:4984/",
                    "HealthyThreshold": "3",
                    "UnhealthyThreshold": "5",
                    "Interval": "300",
                    "Timeout": "5"
                }
            }
        },
        "CouchbaseInstanceProfile": {
            "Type": "AWS::IAM::InstanceProfile",
            "Condition": "Install",
            "Properties": {
                "Roles": [
                    {
                        "Ref": "CouchbaseRole"
                    }
                ]
            }
        },
        "CouchbaseRole": {
            "Type": "AWS::IAM::Role",
            "Condition": "Install",
            "Properties": {
                "AssumeRolePolicyDocument": {
                    "Version": "2012-10-17",
                    "Statement": [
                        {
                            "Effect": "Allow",
                            "Principal": {
                                "Service": [
                                    "ec2.amazonaws.com"
                                ]
                            },
                            "Action": [
                                "sts:AssumeRole"
                            ]
                        }
                    ]
                },
                "Policies": [
                    {
                        "PolicyName": "CouchbasePolicy",
                        "PolicyDocument": {
                            "Version": "2012-10-17",
                            "Statement": [
                                {
                                    "Effect": "Allow",
                                    "Action": [
                                        "ec2:CreateTags",
                                        "ec2:DescribeTags",
                                        "ec2:DescribeInstances",
                                        "autoscaling:DescribeAutoScalingGroups",
                                        "ssm:GetParameter",
                                        "secretsmanager:GetSecretValue"
                                    ],
                                    "Resource": "*"
                                }
                            ]
                        }
                    }
                ]
            }
        },
        "CouchbaseServerSecurityGroup": {
            "Type": "AWS::EC2::SecurityGroup",
            "Condition": "InstallCouchbaseServer",
            "Properties": {
                "VpcId": {
                    "Ref": "VpcName"
                },
                "GroupDescription": "Enable SSH and Couchbase Ports",
                "SecurityGroupEgress": [
                    {
                        "IpProtocol": "tcp",
                        "Description": "Outbound Access",
                        "FromPort": 0,
                        "ToPort": 65535,
                        "CidrIp": "0.0.0.0/0"
                    }
                ],
                "SecurityGroupIngress": [
                    {
                        "IpProtocol": "tcp",
                        "Description": "Outbound Access",
                        "FromPort": 22,
                        "ToPort": 22,
                        "CidrIp": {
                            "Ref": "SSHCIDR"
                        }
                    },
                    {
                        "IpProtocol": "tcp",
                        "Description": "Couchbase Server Inbound",
                        "FromPort": 4369,
                        "ToPort": 4369,
                        "CidrIp": {
                            "Ref": "SSHCIDR"
                        }
                    },
                    {
                        "IpProtocol": "tcp",
                        "Description": "Couchbase Server Inbound",
                        "FromPort": 4984,
                        "ToPort": 4985,
                        "CidrIp": {
                            "Ref": "SSHCIDR"
                        }
                    },
                    {
                        "IpProtocol": "tcp",
                        "Description": "Couchbase Server Inbound",
                        "FromPort": 8091,
                        "ToPort": 8096,
                        "CidrIp": {
                            "Ref": "SSHCIDR"
                        }
                    },
                    {
                        "IpProtocol": "tcp",
                        "Description": "Couchbase Server Inbound",
                        "FromPort": 9100,
                        "ToPort": 9105,
                        "CidrIp": {
                            "Ref": "SSHCIDR"
                        }
                    },
                    {
                        "IpProtocol": "tcp",
                        "Description": "Couchbase Server Inbound",
                        "FromPort": 9110,
                        "ToPort": 9122,
                        "CidrIp": {
                            "Ref": "SSHCIDR"
                        }
                    },
                    {
                        "IpProtocol": "tcp",
                        "Description": "Couchbase Server Inbound",
                        "FromPort": 9130,
                        "ToPort": 9130,
                        "CidrIp": {
                            "Ref": "SSHCIDR"
                        }
                    },
                    {
                        "IpProtocol": "tcp",
                        "Description": "Couchbase Server Inbound",
                        "FromPort": 9998,
                        "ToPort": 9999,
                        "CidrIp": {
                            "Ref": "SSHCIDR"
                        }
                    },
                    {
                        "IpProtocol": "tcp",
                        "Description": "Couchbase Server Inbound",
                        "FromPort": 11207,
                        "ToPort": 11215,
                        "CidrIp": {
                            "Ref": "SSHCIDR"
                        }
                    },
                    {
                        "IpProtocol": "tcp",
                        "Description": "Couchbase Server Inbound",
                        "FromPort": 18091,
                        "ToPort": 18096,
                        "CidrIp": {
                            "Ref": "SSHCIDR"
                        }
                    },
                    {
                        "IpProtocol": "tcp",
                        "Description": "Couchbase Server Inbound",
                        "FromPort": 21100,
                        "ToPort": 21299,
                        "CidrIp": {
                            "Ref": "SSHCIDR"
                        }
                    }
                ]
            }
        },
        "SyncGatewaySecurityGroup": {
            "Type": "AWS::EC2::SecurityGroup",
            "Condition": "InstallSyncGateway",
            "Properties": {
                "VpcId": {
                    "Ref": "VpcName"
                },
                "GroupDescription": "Enable SSH and Sync Gateway Ports",
                "SecurityGroupEgress": [
                    {
                        "IpProtocol": "tcp",
                        "Description": "Outbound Access",
                        "FromPort": 0,
                        "ToPort": 65535,
                        "CidrIp": "0.0.0.0/0"
                    }
                ],
                "SecurityGroupIngress": [
                    {
                        "IpProtocol": "tcp",
                        "Description": "SSH Inbound Port",
                        "FromPort": 22,
                        "ToPort": 22,
                        "CidrIp": {
                            "Ref": "SSHCIDR"
                        }
                    },
                    {
                        "IpProtocol": "tcp",
                        "Description": "Sync Gateway Inbound",
                        "FromPort": 4984,
                        "ToPort": 4984,
                        "CidrIp": {
                            "Ref": "SSHCIDR"
                        }
                    },
                    {
                        "IpProtocol": "tcp",
                        "Description": "Sync Gateway Inbound",
                        "FromPort": 4985,
                        "ToPort": 4985,
                        "CidrIp": {
                            "Ref": "SSHCIDR"
                        }
                    },
                    {
                        "IpProtocol": "tcp",
                        "Description": "Sync Gateway Inbound",
                        "FromPort": 4986,
                        "ToPort": 4986,
                        "CidrIp": {
                            "Ref": "SSHCIDR"
                        }
                    }
                ]
            }
        }
    }
}
